# dotfiles

./: .gitignore  .p10k.zsh  Dockerfile  README.md  aliases  aliases.sh  brewfile  config_ssh  default.conf.yaml  default.profraw  fedora.conf.yaml  gitconfig  install  install.conf.yaml  install.ps1  keybindings.json  linux-server.conf.yaml  linux.conf.yaml  mac.conf.yaml  minimal-zshrc  mkdocs.yml  p10k.zsh  sdf  server.conf.yaml  settings.json  setup.sh  simplebarrc  symlink.sh  symlinking.sh  sync-this-repo.sh  test.md  token.sh  transient-prompt.zsh  windows.conf.yaml  windows.conf.yml  zprofile  zshrc
.opencode/agents/: pr-summarizer.md
.vectorcode/: config.json
aerospace/: aerospace.toml
atuin/: atuin-receipt.json  config.toml  config.toml.bak
brew/: Brewfile  Brewfile-macbook-air-von-tim  Brewfile-macbook-merlin  Brewfile-macbook-pro-tim  Brewfile-macbook-tim  Brewfile.lock.json  brewfile
ccstatusline/: settings.json
claude/: claude-notify.sh  keybindings.json  settings.json
cookiecutter/DataScience/: cookiecutter.json  copier.yml
cookiecutter/DataScience/{{cookiecutter.repo_name}}/: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml  readme.md  requirements.txt  setup.py
cookiecutter/DataScience/{{cookiecutter.repo_name}}/docs/: index.md
cookiecutter/DataScience/{{cookiecutter.repo_name}}/notebooks/: nb_utils.py
cookiecutter/DataScience/{{cookiecutter.repo_name}}/{{cookiecutter.package_name}}/: utils.py
cookiecutter/python_minimal/: cookiecutter.json
cookiecutter/python_minimal/{{cookiecutter.repo_name}}/: .pre-commit-config.yaml  pyproject.toml  readme.md
cookiecutter/python_minimal/{{cookiecutter.repo_name}}/.github/workflows/: pull-requets.yml
cookiecutter/python_minimal/{{cookiecutter.repo_name}}/{{cookiecutter.package_name}}/: utils.py
copier/: readme.md
copier/DataScience/: copier.yml
copier/python/: copier.yml
crush/: crush.json
espanso/config/: default.yml
espanso/match/: base.yml  engineering.yml  nvim.yaml  obsidian.yml  python.yml  teqyard.yml  terminal.yml
fedora/: setup_fedora.sh
ghostty/: config
git/: gitconfig
github-actions/: cleanup_script.sh
hammerspoon/: agent-fleet-parse.lua  agent-fleet-parse.test.lua  agent-fleet.lua  clipboard.lua  config.lua  dotfiles.lua  init.lua  utils.lua
homebrew/: Brewfile  casks.txt  packages.txt
iterm2/: Default.itermkeymap  colors.itermcolors  com.googlecode.iterm2.plist  profile_Light.json
karabiner/: build-karabiner-config.js  karabiner.json
karabiner/automatic_backups/: karabiner_20230811.json  karabiner_20230822.json  karabiner_20231006.json  karabiner_20231025.json  karabiner_20231030.json  karabiner_20231103.json  karabiner_20231106.json  karabiner_20231111.json  karabiner_20231205.json  karabiner_20240304.json  karabiner_20240305.json  karabiner_20240526.json  karabiner_20240611.json  karabiner_20240821.json  karabiner_20241010.json  karabiner_20241013.json  karabiner_20241014.json  karabiner_20241015.json  karabiner_20241022.json  karabiner_20241121.json  karabiner_20241206.json  karabiner_20250207.json  karabiner_20250319.json  karabiner_20250405.json  karabiner_20250907.json  karabiner_20251118.json  karabiner_20251121.json  karabiner_20251125.json  karabiner_20260331.json
kitty/: .kitty.conf.swp  kitty.conf  kitty.conf.bak  ssh.conf
lazygit/: config.yml  state.yml
leader-key/: config.json
linux-server/: README.md  aliases  gitconfig  install.sh  starship.toml  zshrc
linux-server/bat/: config
linux-server/nvim/: init.lua
linux-server/tmux/: tmux.conf
mcphub/: servers.json
minimal-nvim/: init.lua
nvim/: .stylua.toml  init.lua  lazy-lock.json  nvim-config-todo.md
nvim/formatters/: markdownlint.json
nvim/lua/: autocommands.lua  keymaps.lua  lazy-plugins.lua  options.lua  plugins.lua
nvim/tex/: ltex.dictionary.de-DE.txt  ltex.dictionary.en-US.txt  ltex.disabledRules.de-de.txt  ltex.hiddenFalsePositives.de-DE.txt  ltex.hiddenFalsePositives.de.txt  ltex.hiddenFalsePositives.en-US.txt
opencode/: AGENTS.md  insights.json  magic-context.jsonc  opencode-notifier-state.json  opencode-notifier.json  opencode.json  opencode.json.tui-migration.bak  package-lock.json  plugin-updates.json  sidechat.jsonc  tui.json
opencode/agents/: accessibility-auditor.md  ai-engineer.md  api-tester.md  backend-architect.md  branch-reviewer.md  brand-guardian.md  code-reviewer.md  corporate-training-designer.md  data-engineer.md  (+28 more)
ruff/: ruff.toml
scripts/: setup_git.sh  setup_zsh.sh
sesh/: default-session.sh  sesh.toml
skhd/: skhdrc
starship/: starship.toml
television/: config.toml  default_channels.toml
tmux/: agent-fleet-list.sh  agent-fleet-list.test.sh  agent-fleet.sh  agent-switch.sh  github-notifier.sh  tmux-nerd-font-window-name.yml  tmux.conf  tmux.remote.conf
topgrade/: topgrade.toml
vectorcode/: config.json  docker-compose.yaml
vscode/: argv.json  keybindings.json  settings.json
wezterm/: wezterm.lua
whosthere/: config.yaml
yabai/: yabairc
yazi/: init.lua  keymap.toml  keymap.toml-1748956975478938  package.toml  theme.toml  yazi.toml
yt-dlp/: config
(+627 files in other folders)
