[tool.poetry]
name = "{{cookiecutter.repo_name}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.authors}} <{{cookiecutter.mail}}>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.10.6"
numpy = "^1.26.4"
pandas = "^2.2.2"
pyarrow = "^15.0.0"
seaborn = "^0.13.2"
scikit-learn = "^1.5.1"
tensorflow = "^2.16"
tensorflow-metal = { version = "^1.1", platform = "darwin", markers = "platform_machine == 'arm64'" }

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
ipykernel = "^6.29.5"
jupyter = "^1.0.0"
notebook = "^7.2.1"
pylint = "^3.2.5"
pytest = "^7.4.2"
ruff = "^0.5.0"
debugpy = "^1.8.8"

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "PD", "NPY", "SIM", "N", "C90", "D1"]
ignore = []

[tool.ruff.format]
indent-style = "tab"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
