[project]
name = "{{cookiecutter.repo_name}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = [
  { name = "Tim Hildebrandt", email = "44113468+tim-hilde@users.noreply.github.com" },
]
readme = "readme.md"

requires-python = ">=3.10"

dependencies = [
  "numpy~=1.26.0",
  "pandas~=2.2.0",
  "pyarrow~=15.0.0",
  "seaborn~=0.13.0",
  "scikit-learn~=1.5.0",
  "tensorflow~=2.16.0",
  "tensorflow-metal>=1.1; platform_system == 'Darwin' and platform_machine == 'arm64'",

]

[dependency-groups]
dev = [
  "debugpy~=1.8.8",
  "ipdb~=0.13.13",
  "ipykernel~=6.29.5",
  "jupyter~=1.0.0",
  "mypy>=1.15.0",
  "notebook~=7.2.1",
  "pre-commit>=4.2.0",
  "pylint~=3.2.5",
  "pytest~=7.4.2",
  "ruff~=0.11.0",
  "mkdocs-material~=9.0.0",
]

[tool.uv]
default-groups = "all"
package = true

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
  "B",
  "C90",
  "D1",
  "E",
  "F",
  "N",
  "NPY",
  "PERF",
  "PD",
  "PL",
  "S",
  "SIM",
  "W",
]
ignore = ["D104", "D100", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004"]

[tool.ruff.format]
indent-style = "tab"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
